--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,9 @@ python:
   - "pypy"
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
-install: pip install -r requirements.txt
+install:
+    pip install -r tests/requirements.txt
+    pip install .
 
 # command to run tests, e.g. python setup.py test
-script: python setup.py test
+script: make test
