--- a/tox.ini
+++ b/tox.ini
@@ -4,5 +4,5 @@ envlist = py27, py33, py34
 [testenv]
 deps =
     -r{toxinidir}/tests/requirements.txt
-    -r{toxinidir}/requirements.txt
-commands = nosetests -v --with-doctest --rednose
+    .
+commands = nosetests --with-doctest --rednose -s -v
