--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,12 @@ python:
   - "3.4"
   - "3.3"
   - "2.7"
-  - "2.6"
   - "pypy"
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install:
-    pip install -r tests/requirements.txt
-    pip install .
+  - pip install -r tests/requirements.txt
+  - pip install .
 
 # command to run tests, e.g. python setup.py test
 script: make test
