--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,12 @@
-# Config file for automatic testing at travis-ci.org
-
 language: python
+python: 2.7
+env:
+  - TOXENV=py27
+  - TOXENV=pypy
+  - TOXENV=py33
+  - TOXENV=py34
 
-python:
-  - "3.4"
-  - "3.3"
-  - "2.7"
-  - "pypy"
-
-# command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install:
-  - pip install -r tests/requirements.txt
-  - pip install .
+  - pip install tox
 
-# command to run tests, e.g. python setup.py test
-script: make test
+script: tox
