--- a/tox.ini
+++ b/tox.ini
@@ -5,4 +5,4 @@ envlist = py27, py33, py34
 deps =
     -r{toxinidir}/tests/requirements.txt
     .
-commands = nosetests --with-doctest --rednose -s -v
+commands = py.test {posargs:parsel tests}
