copying Travis config for notifications and release from w3lib

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,20 @@ install:
   - pip install tox
 
 script: tox
+notifications:
+  irc:
+    use_notice: true
+    skip_join: true
+    channels:
+    - irc.freenode.org#scrapy
+deploy:
+  provider: pypi
+  distributions: sdist bdist_wheel
+  user: scrapy
+  password:
+    secure: gIMpTo+g15n4fmR2Aw4X6GqCpkhd2NyLK0E1OzJVQqDMFD2e296I2MEWJQ5etKFYP+xABllMao9sO+pBKZLXvVilhHa1PCO5v9Mo3i9TDvszW+o9iW4ArrMRkfZR2+NV47vff1KUkBHFuqRkzOks/NS9wMG6A3MXAa4EFkH9UhI=
+  on:
+    tags: true
+    all_branches: true
+    repo: scrapy/parsel
+    condition: "$TOXENV == py27"
