--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,19 @@
 language: python
 python: 2.7
 env:
-- TOXENV=py27
-- TOXENV=pypy
-- TOXENV=py33
-- TOXENV=py34
+  - TOXENV=py27
+  - TOXENV=pypy
+  - TOXENV=py33
+  - TOXENV=py34
 install:
-- pip install tox
+  - pip install -U tox twine wheel
 script: tox
 notifications:
   irc:
     use_notice: true
     skip_join: true
     channels:
-    - irc.freenode.org#scrapy
+      - irc.freenode.org#scrapy
 deploy:
   provider: pypi
   distributions: sdist bdist_wheel
