tox.ini updated to add benchmark command and skip benchmarks during normal testing run.

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,10 @@
 [tox]
-envlist = py27, py33, py34, py35, pypy
+envlist = py{27,33,34,35,py}-{test}
 
 [testenv]
 deps =
     -r{toxinidir}/tests/requirements.txt
     .
-commands = py.test --cov=parsel --cov-report= {posargs:parsel tests}
+commands =
+  test: py.test --cov=parsel --cov-report= {posargs:parsel tests} --benchmark-skip
+  benchmark: py.test {posargs:parsel tests} --benchmark-only --benchmark-max-time=30
