--- a/tox.ini
+++ b/tox.ini
@@ -4,5 +4,6 @@ envlist = py27, py33, py34, py35, pypy
 [testenv]
 deps =
     -r{toxinidir}/tests/requirements.txt
-    .
+    -r{toxinidir}/requirements.txt
+
 commands = py.test --cov=parsel --cov-report= {posargs:parsel tests}
