Update makefile help

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -46,6 +46,7 @@ help:
 	@echo "  pseudoxml  to make pseudoxml-XML files for display purposes"
 	@echo "  linkcheck  to check all external links for integrity"
 	@echo "  doctest    to run all doctests embedded in the documentation (if enabled)"
+	@echo "  htmlview    to view the compiled HTML files in browser"
 
 clean:
 	rm -rf $(BUILDDIR)/*
