--- a/tox.ini
+++ b/tox.ini
@@ -6,3 +6,15 @@ deps =
     -r{toxinidir}/tests/requirements.txt
 
 commands = py.test --cov=parsel --cov-report= {posargs:parsel tests}
+
+[docs]
+changedir = docs
+deps =
+    sphinx
+    sphinx_rtd_theme
+
+[testenv:docs]
+changedir = {[docs]changedir}
+deps = {[docs]deps}
+commands =
+    sphinx-build -W -b html . {envtmpdir}/html
