--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,8 @@ matrix:
   include:
     - python: 2.7
       env: TOXENV=py27
-    - python: 2.7
+    - python: pypy
       env: TOXENV=pypy
-    - python: 2.7
-      env: TOXENV=pypy3
     - python: 3.4
       env: TOXENV=py34
     - python: 3.5
@@ -20,28 +18,11 @@ matrix:
       env: TOXENV=py36
     - python: 3.7
       env: TOXENV=py37
-      dist: xenial
-      sudo: true
+    - python: pypy3
+      env: TOXENV=pypy3
     - python: 3.7
       env: TOXENV=docs
-      dist: xenial
-      sudo: true
 install:
-  - |
-      if [ "$TOXENV" = "pypy" ]; then
-        export PYPY_VERSION="pypy-6.0.0-linux_x86_64-portable"
-        wget "https://bitbucket.org/squeaky/portable-pypy/downloads/${PYPY_VERSION}.tar.bz2"
-        tar -jxf ${PYPY_VERSION}.tar.bz2
-        virtualenv --python="$PYPY_VERSION/bin/pypy" "$HOME/virtualenvs/$PYPY_VERSION"
-        source "$HOME/virtualenvs/$PYPY_VERSION/bin/activate"
-      fi
-      if [ "$TOXENV" = "pypy3" ]; then
-        export PYPY_VERSION="pypy3.5-6.0.0-linux_x86_64-portable"
-        wget "https://bitbucket.org/squeaky/portable-pypy/downloads/${PYPY_VERSION}.tar.bz2"
-        tar -jxf ${PYPY_VERSION}.tar.bz2
-        virtualenv --python="$PYPY_VERSION/bin/pypy3" "$HOME/virtualenvs/$PYPY_VERSION"
-        source "$HOME/virtualenvs/$PYPY_VERSION/bin/activate"
-      fi
   - pip install -U pip tox twine wheel codecov
 script: tox
 after_success:
