--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ matrix:
   include:
     - python: 3.8
       env: TOXENV=flake8
+    - python: 3.8
+      env: TOXENV=pylint
     - python: 2.7
       env: TOXENV=py27
     - python: pypy
