--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,14 @@ deps =
 commands =
     pytest --flake8
 
+[testenv:pylint]
+basepython = python3.8
+deps =
+    {[testenv]deps}
+    pylint
+commands =
+    pylint docs parsel setup.py tests
+
 [docs]
 changedir = docs
 deps =
