Set the bases for testing code examples from the documentation

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,6 @@
 [pytest]
-addopts = --doctest-modules --assert=plain --ignore=setup.py
+addopts =
+    --doctest-modules
+    --assert=plain
+    --ignore=docs/usage.rst
+    --ignore=setup.py
