--- a/tox.ini
+++ b/tox.ini
@@ -4,8 +4,9 @@ envlist = py27, py34, py35, py36, py37, pypy, pypy3
 [testenv]
 deps =
     -r{toxinidir}/tests/requirements.txt
-
-commands = py.test --cov=parsel --cov-report= {posargs:parsel tests}
+setenv =
+    PY_IGNORE_IMPORTMISMATCH=1
+commands = py.test --cov=parsel --cov-report= {posargs:docs parsel tests}
 
 [docs]
 changedir = docs
