Install the sphinx-notfound-page Sphinx extension

--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,7 @@ commands = py.test --cov=parsel --cov-report= {posargs:parsel tests}
 changedir = docs
 deps =
     sphinx
+    sphinx-notfound-page
     sphinx_rtd_theme
 
 [testenv:docs]
