Add a code complexity check to CI

--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,13 @@ deps =
 
 commands = py.test --cov=parsel --cov-report= {posargs:parsel tests}
 
+[testenv:complexity]
+basepython = python3.8
+deps =
+    xenon
+commands =
+    xenon --max-absolute B --max-modules A --max-average A .
+
 [docs]
 changedir = docs
 deps =
