--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ branches:
     - /^v\d\.\d+\.\d+(rc\d+|\.dev\d+)?$/
 matrix:
   include:
+    - python: 3.8
+      env: TOXENV=flake8
     - python: 2.7
       env: TOXENV=py27
     - python: pypy
