--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,12 @@
 [pytest]
 addopts = --doctest-modules --assert=plain --ignore=setup.py
+flake8-ignore =
+    docs/conf.py E265 E402
+    parsel/csstranslator.py E402 E501
+    parsel/selector.py E126 E305 E501
+    parsel/utils.py E226 E501
+    parsel/xpathfuncs.py E501
+    tests/test_selector.py E124 E127 E128 E231 E265 E303 E501 F811 W293
+    tests/test_selector_csstranslator.py E501
+    tests/test_utils.py E501
+    tests/test_xpathfuncs.py E501
