--- a/tox.ini
+++ b/tox.ini
@@ -2,10 +2,9 @@
 envlist = py27, py34, py35, py36, py37, pypy, pypy3
 
 [testenv]
+usedevelop = True
 deps =
     -r{toxinidir}/tests/requirements.txt
-setenv =
-    PY_IGNORE_IMPORTMISMATCH=1
 commands = py.test --cov=parsel --cov-report= {posargs:docs parsel tests}
 
 [docs]
