Add bandit to CI

--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,13 @@ deps =
 
 commands = py.test --cov=parsel --cov-report= {posargs:parsel tests}
 
+[testenv:security]
+basepython = python3
+deps =
+    bandit
+commands =
+    bandit -r -c .bandit.yml {posargs:parsel}
+
 [docs]
 changedir = docs
 deps =
