--- a/tox.ini
+++ b/tox.ini
@@ -17,10 +17,7 @@ commands =
 
 [docs]
 changedir = docs
-deps =
-    sphinx
-    sphinx-notfound-page
-    sphinx_rtd_theme
+deps = -rdocs/requirements.txt
 
 [testenv:docs]
 changedir = {[docs]changedir}
