--- a/pytest.ini
+++ b/pytest.ini
@@ -8,5 +8,6 @@ flake8-ignore =
     parsel/xpathfuncs.py E501
     tests/test_selector.py E124 E127 E128 E231 E265 E303 E501 F811 W293
     tests/test_selector_csstranslator.py E501
+    tests/test_selector_jsonpath.py E501
     tests/test_utils.py E501
     tests/test_xpathfuncs.py E501
