tests.yml: pypy3: TOXENV: py → pypy

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,7 +27,7 @@ jobs:
             TOXENV: py
         - python-version: pypy3
           env:
-            TOXENV: py
+            TOXENV: pypy
 
     steps:
     - uses: actions/checkout@v2
