Fix Codecov not getting coverage reports

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ envlist = py27, py35, py36, py37, py38, pypy, pypy3
 usedevelop = True
 deps =
     -r{toxinidir}/tests/requirements.txt
-commands = py.test --cov=parsel --cov-report= {posargs:docs parsel tests}
+commands = py.test --cov=parsel --cov-report=xml {posargs:docs parsel tests}
 
 [testenv:security]
 basepython = python3.8
