--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py36, py37, py38, py39, pypy3
+envlist = security,flake8,pylint,docs,py
 
 [testenv]
 usedevelop = True
@@ -8,14 +8,12 @@ deps =
 commands = py.test --cov=parsel --cov-report=xml {posargs:docs parsel tests}
 
 [testenv:security]
-basepython = python3.8
 deps =
     bandit
 commands =
     bandit -r -c .bandit.yml {posargs:parsel}
 
 [testenv:flake8]
-basepython = python3.8
 deps =
     {[testenv]deps}
     pytest-flake8
@@ -23,7 +21,6 @@ commands =
     pytest --flake8
 
 [testenv:pylint]
-basepython = python3.8
 deps =
     {[testenv]deps}
     pylint
