Keep Tox environments of specific Python versions

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = security,flake8,pylint,docs,py
+envlist = security,flake8,pylint,docs,py36,py37,py38,py39,pypy3
 
 [testenv]
 usedevelop = True
