--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -5,15 +5,16 @@ jobs:
   checks:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         include:
-        - python-version: 3.8
+        - python-version: 3.9
           env:
             TOXENV: security
-        - python-version: 3.8
+        - python-version: 3.9
           env:
             TOXENV: flake8
-        - python-version: 3.8
+        - python-version: 3.9
           env:
             TOXENV: pylint
         - python-version: 3.8  # Keep in sync with .readthedocs.yml
