Fix the ReadTheDocs build and reproduce with Tox

--- a/tox.ini
+++ b/tox.ini
@@ -36,3 +36,5 @@ changedir = {[docs]changedir}
 deps = {[docs]deps}
 commands =
     sphinx-build -W -b html . {envtmpdir}/html
+    sphinx-build -W -b latex . {envtmpdir}/html
+    sphinx-build -W -b epub . {envtmpdir}/html
