--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -8,20 +8,16 @@ jobs:
       fail-fast: false
       matrix:
         include:
-        - python-version: 3.9
-          env:
-            TOXENV: security
-        - python-version: 3.9
-          env:
-            TOXENV: flake8
-        - python-version: 3.9
-          env:
-            TOXENV: pylint
-        - python-version: 3.8  # Keep in sync with .readthedocs.yml
-          env:
-            TOXENV: docs
+        - name: security
+          python-version: 3.9
+        - name: flake8
+          python-version: 3.9
+        - name: pylint
+          python-version: 3.9
+        - name: docs
+          python-version: 3.8  # Keep in sync with .readthedocs.yml
           system-libraries:
-          - gs
+          - ghostscript
 
     steps:
     - uses: actions/checkout@v2
@@ -38,7 +34,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
 
     - name: Run check
-      env: ${{ matrix.env }}
+      env:
+        TOXENV: ${{ matrix.name }}
       run: |
         pip install -U tox
         tox
