--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -26,7 +26,7 @@ jobs:
       if: matrix.system-libraries
       run: |
         sudo apt-get update
-        sudo apt-get install ${{ join(matrix.python-version, ' ') }}
+        sudo apt-get install ${{ join(matrix.system-libraries, ' ') }}
 
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
