docs: use sphinxcontrib-svg2pdfconverter

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -17,7 +17,7 @@ jobs:
         - name: docs
           python-version: 3.8  # Keep in sync with .readthedocs.yml
           system-libraries:
-          - ghostscript
+          - inkscape
 
     steps:
     - uses: actions/checkout@v2
