--- a/tox.ini
+++ b/tox.ini
@@ -34,7 +34,9 @@ deps = -rdocs/requirements.txt
 [testenv:docs]
 changedir = {[docs]changedir}
 deps = {[docs]deps}
+# No -W in LaTeX, because ReadTheDocs does not use it either, and there are
+# image conversion warnings that cannot be addressed in ReadTheDocs
 commands =
     sphinx-build -W -b html . {envtmpdir}/html
-    sphinx-build -W -b latex . {envtmpdir}/html
+    sphinx-build -b latex . {envtmpdir}/html
     sphinx-build -W -b epub . {envtmpdir}/html
