--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -8,23 +8,21 @@ jobs:
       fail-fast: false
       matrix:
         include:
-        - name: security
-          python-version: 3.9
-        - name: flake8
-          python-version: 3.9
-        - name: pylint
-          python-version: 3.9
-        - name: docs
-          python-version: 3.8  # Keep in sync with .readthedocs.yml
+        - python-version: 3.9
+          env:
+            TOXENV: security
+        - python-version: 3.9
+          env:
+            TOXENV: flake8
+        - python-version: 3.9
+          env:
+            TOXENV: pylint
+        - python-version: 3.8  # Keep in sync with .readthedocs.yml
+          env:
+            TOXENV: docs
 
     steps:
     - uses: actions/checkout@v2
-
-    - name: Install system libraries
-      if: matrix.system-libraries
-      run: |
-        sudo apt-get update
-        sudo apt-get install ${{ join(matrix.system-libraries, ' ') }}
 
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
@@ -32,8 +30,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
 
     - name: Run check
-      env:
-        TOXENV: ${{ matrix.name }}
+      env: ${{ matrix.env }}
       run: |
         pip install -U tox
         tox
