Fix documentation build output folders

--- a/tox.ini
+++ b/tox.ini
@@ -38,5 +38,5 @@ deps = {[docs]deps}
 # image conversion warnings that cannot be addressed in ReadTheDocs
 commands =
     sphinx-build -W -b html . {envtmpdir}/html
-    sphinx-build -b latex . {envtmpdir}/html
-    sphinx-build -W -b epub . {envtmpdir}/html
+    sphinx-build -b latex . {envtmpdir}/latex
+    sphinx-build -W -b epub . {envtmpdir}/epub
