--- a/pytest.ini
+++ b/pytest.ini
@@ -9,3 +9,4 @@ flake8-ignore =
     tests/test_selector_csstranslator.py E501
     tests/test_utils.py E501
     tests/test_xpathfuncs.py E501
+    tests/typing/*.py E F
