--- a/tox.ini
+++ b/tox.ini
@@ -20,6 +20,13 @@ deps =
 commands =
     pytest --flake8
 
+[testenv:typing]
+deps =
+    {[testenv]deps}
+    mypy
+commands =
+    mypy {posargs:tests} --warn-unused-ignores --ignore-missing-imports
+
 [testenv:pylint]
 deps =
     {[testenv]deps}
