--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = security,flake8,pylint,docs,py36,py37,py38,py39,pypy3
+envlist = security,flake8,typing,pylint,black,docs,py36,py37,py38,py39,pypy3
 
 [testenv]
 usedevelop = True
@@ -33,6 +33,12 @@ deps =
     pylint
 commands =
     pylint docs parsel setup.py tests
+
+[testenv:black]
+deps =
+    black
+commands =
+    black --check {posargs:parsel setup.py tests}
 
 [docs]
 changedir = docs
