Also run black and pylint on conftest.py.

--- a/tox.ini
+++ b/tox.ini
@@ -32,13 +32,13 @@ deps =
     {[testenv]deps}
     pylint
 commands =
-    pylint docs parsel setup.py tests
+    pylint docs parsel tests conftest.py setup.py
 
 [testenv:black]
 deps =
     black
 commands =
-    black --check {posargs:parsel setup.py tests}
+    black --check {posargs:parsel tests conftest.py setup.py}
 
 [docs]
 changedir = docs
