--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = security,flake8,pylint,docs,py36,py37,py38,py39,pypy3
+envlist = security,flake8,typing,pylint,black,docs,py36,py37,py38,py39,pypy3
 
 [testenv]
 usedevelop = True
@@ -32,7 +32,13 @@ deps =
     {[testenv]deps}
     pylint
 commands =
-    pylint docs parsel setup.py tests
+    pylint docs parsel tests conftest.py setup.py
+
+[testenv:black]
+deps =
+    black
+commands =
+    black --check {posargs:parsel tests conftest.py setup.py}
 
 [docs]
 changedir = docs
