--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,6 +20,12 @@ jobs:
         - python-version: 3.9
           env:
             TOXENV: py
+        - python-version: "3.10"
+          env:
+            TOXENV: py
+        - python-version: "3.10"
+          env:
+            TOXENV: asyncio
         - python-version: pypy3
           env:
             TOXENV: pypy
