--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,16 +8,16 @@ jobs:
       fail-fast: false
       matrix:
         include:
-        - python-version: 3.6
+        - python-version: "3.6"
           env:
             TOXENV: py
-        - python-version: 3.7
+        - python-version: "3.7"
           env:
             TOXENV: py
-        - python-version: 3.8
+        - python-version: "3.8"
           env:
             TOXENV: py
-        - python-version: 3.9
+        - python-version: "3.9"
           env:
             TOXENV: py
         - python-version: "3.10"
