--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -8,7 +8,7 @@ build:
 python:
   # For available versions, see:
   # https://docs.readthedocs.io/en/stable/config-file/v2.html#build-image
-  version: 3.8  # Keep in sync with .github/workflows/checks.yml
+  version: "3.10"  # Keep in sync with .github/workflows/checks.yml
   install:
     - requirements: docs/requirements.txt
     - path: .
