Freezing pylint version to current latest - v2.11.1

--- a/tox.ini
+++ b/tox.ini
@@ -30,7 +30,7 @@ commands =
 [testenv:pylint]
 deps =
     {[testenv]deps}
-    pylint
+    pylint==2.11.1
 commands =
     pylint docs parsel tests conftest.py setup.py
 
