Add a comment for the flake8 pin.

--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ commands =
 [testenv:flake8]
 deps =
     {[testenv]deps}
-    flake8<4
+    flake8<4  # https://github.com/tholo/pytest-flake8/issues/81
     pytest-flake8
 commands =
     pytest --flake8
