Ignore "line too long" for docs/conftest.py.

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,6 +2,7 @@
 addopts = --assert=plain --doctest-modules --ignore=setup.py
 flake8-ignore =
     E203
+    docs/conftest.py E501
     parsel/csstranslator.py E501
     parsel/selector.py E501
     parsel/utils.py E226 E501
