docs folder included in black default arguments

--- a/tox.ini
+++ b/tox.ini
@@ -39,7 +39,7 @@ commands =
 deps =
     black
 commands =
-    black --check {posargs:parsel tests conftest.py setup.py}
+    black --check {posargs:parsel tests docs conftest.py setup.py}
 
 [docs]
 changedir = docs
