--- a/tox.ini
+++ b/tox.ini
@@ -39,7 +39,7 @@ commands =
 deps =
     black
 commands =
-    black --check {posargs:parsel tests docs conftest.py setup.py}
+    black --line-length=79 --check {posargs:parsel tests docs conftest.py setup.py} 
 
 [docs]
 changedir = docs
