black pinned to cur version(22.0.3)

--- a/tox.ini
+++ b/tox.ini
@@ -37,9 +37,9 @@ commands =
 
 [testenv:black]
 deps =
-    black
+    black==22.3.0
 commands =
-    black --check {posargs:parsel tests conftest.py setup.py}
+    black --line-length=79 --check {posargs:parsel tests conftest.py setup.py}
 
 [docs]
 changedir = docs
