--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,9 +20,9 @@ jobs:
         - python-version: "3.10"
           env:
             TOXENV: py
-        - python-version: pypy3
+        - python-version: pypy3.9
           env:
-            TOXENV: pypy
+            TOXENV: pypy3
 
     steps:
     - uses: actions/checkout@v2
