--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,7 +28,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Install system libraries
-      if: contains(matrix.python-version, 'pypy')
+      if: contains(matrix.python-version, 'pypy3.9')
       run: |
         sudo apt-get update
         sudo apt-get install libxml2-dev libxslt-dev
