--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,6 +23,9 @@ jobs:
         - python-version: "3.10"
           env:
             TOXENV: py
+        - python-version: "3.11.0-rc.2"
+          env:
+            TOXENV: py
         - python-version: pypy3
           env:
             TOXENV: pypy
