Update flake8, get rid of pytest-flake8.

--- a/tox.ini
+++ b/tox.ini
@@ -16,10 +16,9 @@ commands =
 [testenv:flake8]
 deps =
     {[testenv]deps}
-    flake8<4  # https://github.com/tholo/pytest-flake8/issues/81
-    pytest-flake8
+    flake8==5.0.4
 commands =
-    pytest --flake8
+    flake8 {posargs: parsel tests conftest.py setup.py}
 
 [testenv:typing]
 deps =
