--- a/tox.ini
+++ b/tox.ini
@@ -23,7 +23,7 @@ commands =
 [testenv:typing]
 deps =
     {[testenv]deps}
-    mypy
+    mypy==0.982
 commands =
     mypy {posargs:tests} --warn-unused-ignores --ignore-missing-imports
 
