Install types-setuptools for mypy.

--- a/tox.ini
+++ b/tox.ini
@@ -23,6 +23,7 @@ commands =
 [testenv:typing]
 deps =
     {[testenv]deps}
+    types-setuptools==65.5.0.1
     mypy==0.982
 commands =
     mypy {posargs:tests} --warn-unused-ignores --ignore-missing-imports
