--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,9 +8,6 @@ jobs:
       fail-fast: false
       matrix:
         include:
-        - python-version: "3.6"
-          env:
-            TOXENV: py
         - python-version: "3.7"
           env:
             TOXENV: py
@@ -26,21 +23,21 @@ jobs:
         - python-version: "3.11.0-rc.2"
           env:
             TOXENV: py
-        - python-version: pypy3
+        - python-version: pypy3.9
           env:
-            TOXENV: pypy
+            TOXENV: pypy3
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
 
     - name: Install system libraries
-      if: contains(matrix.python-version, 'pypy')
+      if: contains(matrix.python-version, 'pypy3.9')
       run: |
         sudo apt-get update
         sudo apt-get install libxml2-dev libxslt-dev
 
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
 
