Fix mypy issues in parsel.

--- a/tox.ini
+++ b/tox.ini
@@ -23,10 +23,12 @@ commands =
 [testenv:typing]
 deps =
     {[testenv]deps}
+    types-lxml==2022.4.10
+    types-psutil==5.9.5.4
     types-setuptools==65.5.0.1
     mypy==0.982
 commands =
-    mypy {posargs:tests} --warn-unused-ignores --ignore-missing-imports
+    mypy {posargs:parsel tests} --warn-unused-ignores
 
 [testenv:pylint]
 deps =
