Remove obsolete conftest.py.

--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ deps =
     {[testenv]deps}
     flake8==5.0.4
 commands =
-    flake8 {posargs: parsel tests conftest.py setup.py}
+    flake8 {posargs: parsel tests setup.py}
 
 [testenv:typing]
 deps =
@@ -33,7 +33,7 @@ deps =
     {[testenv]deps}
     pylint==2.15.4
 commands =
-    pylint docs parsel tests conftest.py setup.py
+    pylint docs parsel tests setup.py
 
 [testenv:black]
 deps =
