--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,7 +20,7 @@ jobs:
         - python-version: "3.10"
           env:
             TOXENV: py
-        - python-version: "3.11.0-rc.2"
+        - python-version: "3.11"
           env:
             TOXENV: py
         - python-version: pypy3.9
