Switch mypy to --strict.

--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,7 @@ deps =
     types-setuptools==65.5.0.1
     mypy==0.982
 commands =
-    mypy {posargs:parsel tests} --warn-unused-ignores
+    mypy {posargs:parsel tests} --strict
 
 [testenv:pylint]
 deps =
