Remove the remaining conftest.py mention.

--- a/tox.ini
+++ b/tox.ini
@@ -39,7 +39,7 @@ commands =
 deps =
     black==22.10.0
 commands =
-    black --line-length=79 --check {posargs:parsel tests conftest.py setup.py}
+    black --line-length=79 --check {posargs:parsel tests setup.py}
 
 [docs]
 changedir = docs
