Switch to typing_extensions.Self.

--- a/tox.ini
+++ b/tox.ini
@@ -28,6 +28,7 @@ deps =
     types-setuptools==65.5.0.1
     py==1.11.0
     mypy==0.990
+    typing-extensions==4.4.0
 commands =
     mypy {posargs:parsel tests} --strict
 
