--- a/tox.ini
+++ b/tox.ini
@@ -23,12 +23,14 @@ commands =
 [testenv:typing]
 deps =
     {[testenv]deps}
-    types-lxml==2022.4.10
-    types-psutil==5.9.5.4
-    types-setuptools==65.5.0.1
-    mypy==0.982
+    types-lxml==2022.11.8
+    types-psutil==5.9.5.6
+    types-setuptools==67.2.0.1
+    py==1.11.0
+    mypy==1.0.0
+    typing-extensions==4.4.0
 commands =
-    mypy {posargs:parsel tests} --warn-unused-ignores
+    mypy {posargs:parsel tests} --strict
 
 [testenv:pylint]
 deps =
