Add twine check.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = security,flake8,typing,pylint,black,docs,py37,py38,py39,py310,pypy3.9
+envlist = security,flake8,typing,pylint,black,docs,twinecheck,py37,py38,py39,py310,pypy3.9
 
 [testenv]
 usedevelop = True
@@ -59,3 +59,12 @@ commands =
     sphinx-build -W -b html . {envtmpdir}/html
     sphinx-build -b latex . {envtmpdir}/latex
     sphinx-build -b epub . {envtmpdir}/epub
+
+[testenv:twinecheck]
+basepython = python3
+deps =
+    twine==4.0.2
+    build==0.10.0
+commands =
+    python -m build --sdist
+    twine check dist/*
