--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = security,flake8,typing,pylint,black,docs,twinecheck,py37,py38,py39,py310,pypy3.9
+envlist = security,flake8,typing,pylint,black,docs,twinecheck,py38,py39,py310,py311,py312,pypy3.9,pypy3.10
 
 [testenv]
 usedevelop = True
@@ -35,7 +35,7 @@ commands =
 [testenv:pylint]
 deps =
     {[testenv]deps}
-    pylint==2.15.4
+    pylint==3.0.0
 commands =
     pylint docs parsel tests setup.py
 
