--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = security,flake8,typing,pylint,black,docs,twinecheck,py38,py39,py310,py311,py312,pypy3.9,pypy3.10
+envlist = pylint,docs,twinecheck,py38,py39,py310,py311,py312,pypy3.9,pypy3.10
 
 [testenv]
 usedevelop = True
@@ -7,43 +7,12 @@ deps =
     -r{toxinidir}/tests/requirements.txt
 commands = py.test --cov=parsel --cov-report=xml {posargs:docs parsel tests}
 
-[testenv:security]
-deps =
-    bandit
-commands =
-    bandit -r -c .bandit.yml {posargs:parsel}
-
-[testenv:flake8]
-deps =
-    {[testenv]deps}
-    flake8==5.0.4
-commands =
-    flake8 {posargs: parsel tests setup.py}
-
-[testenv:typing]
-deps =
-    {[testenv]deps}
-    types-jmespath==1.0.2.6
-    types-lxml==2022.11.8
-    types-psutil==5.9.5.6
-    types-setuptools==67.2.0.1
-    py==1.11.0
-    mypy==1.0.0
-commands =
-    mypy {posargs:parsel tests} --strict
-
 [testenv:pylint]
 deps =
     {[testenv]deps}
     pylint==3.0.0
 commands =
     pylint docs parsel tests setup.py
-
-[testenv:black]
-deps =
-    black==22.10.0
-commands =
-    black --line-length=79 {posargs:--check parsel tests setup.py}
 
 [docs]
 changedir = docs
@@ -67,3 +36,8 @@ deps =
 commands =
     python -m build --sdist
     twine check dist/*
+
+[testenv:pre-commit]
+deps = pre-commit
+commands = pre-commit run --all-files --show-diff-on-failure
+skip_install = true
