restoring typing env for tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,23 @@
 [tox]
-envlist = pylint,docs,twinecheck,py38,py39,py310,py311,py312,pypy3.9,pypy3.10
+envlist = typing,pylint,docs,twinecheck,pre-commit,py38,py39,py310,py311,py312,pypy3.9,pypy3.10
 
 [testenv]
 usedevelop = True
 deps =
     -r{toxinidir}/tests/requirements.txt
 commands = py.test --cov=parsel --cov-report=xml {posargs:docs parsel tests}
+
+[testenv:typing]
+deps =
+    {[testenv]deps}
+    types-jmespath==1.0.2.6
+    types-lxml==2022.11.8
+    types-psutil==5.9.5.6
+    types-setuptools==67.2.0.1
+    py==1.11.0
+    mypy==1.0.0
+commands =
+    mypy {posargs:parsel tests} --strict
 
 [testenv:pylint]
 deps =
