--- a/tox.ini
+++ b/tox.ini
@@ -10,12 +10,12 @@ commands = py.test --cov=parsel --cov-report=xml {posargs:docs parsel tests}
 [testenv:typing]
 deps =
     {[testenv]deps}
-    types-jmespath==1.0.2.6
-    types-lxml==2022.11.8
-    types-psutil==5.9.5.6
-    types-setuptools==67.2.0.1
+    types-jmespath==1.0.2.20240106
+    types-lxml==2024.2.9
+    types-psutil==5.9.5.20240311
+    types-setuptools==69.1.0.20240310
     py==1.11.0
-    mypy==1.0.0
+    mypy==1.9.0
 commands =
     mypy {posargs:parsel tests} --strict
 
