--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -14,7 +14,7 @@ jobs:
         - python-version: "3.12"
           env:
             TOXENV: pylint
-        - python-version: "3.11"  # Keep in sync with .readthedocs.yml
+        - python-version: "3.12"
           env:
             TOXENV: docs
         - python-version: "3.12"
@@ -28,7 +28,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
 
