--- a/tox.ini
+++ b/tox.ini
@@ -10,19 +10,19 @@ commands = py.test --cov=parsel --cov-report=xml {posargs:docs parsel tests}
 [testenv:typing]
 deps =
     {[testenv]deps}
-    types-jmespath==1.0.2.6
-    types-lxml==2022.11.8
-    types-psutil==5.9.5.6
-    types-setuptools==67.2.0.1
+    types-jmespath==1.0.2.20240106
+    types-lxml==2024.2.9
+    types-psutil==5.9.5.20240311
+    types-setuptools==69.1.0.20240310
     py==1.11.0
-    mypy==1.0.0
+    mypy==1.9.0
 commands =
     mypy {posargs:parsel tests} --strict
 
 [testenv:pylint]
 deps =
     {[testenv]deps}
-    pylint==3.0.0
+    pylint==3.1.0
 commands =
     pylint docs parsel tests setup.py
 
@@ -43,8 +43,8 @@ commands =
 [testenv:twinecheck]
 basepython = python3
 deps =
-    twine==4.0.2
-    build==0.10.0
+    twine==5.0.0
+    build==1.1.1
 commands =
     python -m build --sdist
     twine check dist/*
