--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = typing,pylint,docs,twinecheck,pre-commit,py38,py39,py310,py311,py312,pypy3.9,pypy3.10
+envlist = typing,pylint,docs,twinecheck,pre-commit,py39,py310,py311,py312,py313,pypy3.10
 
 [testenv]
 usedevelop = True
