--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,61 @@
+[tool.bumpversion]
+current_version = "1.10.0"
+commit = true
+tag = true
+tag_name = "v{new_version}"
+
+[[tool.bumpversion.files]]
+filename = "setup.py"
+
+[[tool.bumpversion.files]]
+filename = "parsel/__init__.py"
+
+[tool.coverage.run]
+branch = true
+
+[tool.coverage.report]
+exclude_also = [
+    "@typing.overload",
+    "if TYPE_CHECKING:",
+]
+
+[tool.pylint.MASTER]
+ignore = "typing"
+persistent = "no"
+extension-pkg-allow-list = [
+    "lxml",
+]
+
+[tool.pylint."MESSAGES CONTROL"]
+enable = [
+    "useless-suppression",
+]
+disable = [
+    "fixme",
+    "import-error",
+    "import-outside-toplevel",
+    "invalid-name",
+    "line-too-long",
+    "missing-class-docstring",
+    "missing-function-docstring",
+    "missing-module-docstring",
+    "no-member",
+    "not-callable",
+    "protected-access",
+    "raise-missing-from",
+    "redefined-builtin",
+    "too-few-public-methods",
+    "too-many-arguments",
+    "too-many-lines",
+    "too-many-positional-arguments",
+    "too-many-public-methods",
+    "unused-argument",
+    "wrong-import-position",
+]
+
+[tool.pytest.ini_options]
+addopts = "--assert=plain --doctest-modules --ignore=setup.py"
+
 [tool.ruff.lint]
 extend-select = [
     # flake8-bugbear
