--- a/tox.ini
+++ b/tox.ini
@@ -11,17 +11,17 @@ commands = py.test --cov=parsel --cov-report=xml {posargs:docs parsel tests}
 deps =
     {[testenv]deps}
     types-jmespath==1.0.2.20240106
-    types-lxml==2024.9.16
-    types-psutil==6.0.0.20241011
+    types-lxml==2025.3.4
+    types-psutil==7.0.0.20250218
     py==1.11.0
-    mypy==1.11.2
+    mypy==1.15.0
 commands =
     mypy {posargs:parsel tests} --strict
 
 [testenv:pylint]
 deps =
     {[testenv]deps}
-    pylint==3.3.1
+    pylint==3.3.6
 commands =
     pylint docs parsel tests setup.py
 
@@ -42,8 +42,8 @@ commands =
 [testenv:twinecheck]
 basepython = python3
 deps =
-    twine==5.1.1
-    build==1.2.2
+    twine==6.1.0
+    build==1.2.2.post1
 commands =
     python -m build --sdist
     twine check dist/*
