--- a/tox.ini
+++ b/tox.ini
@@ -23,7 +23,7 @@ deps =
     {[testenv]deps}
     pylint==3.3.6
 commands =
-    pylint docs parsel tests setup.py
+    pylint docs parsel tests
 
 [docs]
 changedir = docs
