--- a/pyproject.toml
+++ b/pyproject.toml
@@ -118,10 +118,16 @@ addopts = "--assert=plain --doctest-modules --ignore=setup.py"
 
 [tool.ruff.lint]
 extend-select = [
+    # flake8-builtins
+    "A",
+    # flake8-async
+    "ASYNC",
     # flake8-bugbear
     "B",
     # flake8-comprehensions
     "C4",
+    # flake8-commas
+    "COM",
     # pydocstyle
     "D",
     # flake8-future-annotations
@@ -176,6 +182,8 @@ extend-select = [
 ignore = [
     # Within an `except` clause, raise exceptions with `raise ... from`
     "B904",
+    # Trailing comma missing
+    "COM812",
     # Missing docstring in public module
     "D100",
     # Missing docstring in public class
@@ -230,12 +238,13 @@ ignore = [
     "RUF012",
     # Use of `assert` detected
     "S101",
-    # Using lxml to parse untrusted data is known to be vulnerable to XML attacks
-    "S320",
 
     # pending: https://github.com/scrapy/parsel/issues/312
     "B019",
 ]
+
+[tool.ruff.lint.isort]
+split-on-trailing-comma = false
 
 [tool.ruff.lint.per-file-ignores]
 "tests/typing/selector.py" = ["F841"]
