--- a/pyproject.toml
+++ b/pyproject.toml
@@ -110,6 +110,7 @@ disable = [
     "too-many-positional-arguments",
     "too-many-public-methods",
     "unused-argument",
+    "use-implicit-booleaness-not-comparison",
     "wrong-import-position",
 ]
 
