--- a/.github/workflows/tests-ubuntu.yml
+++ b/.github/workflows/tests-ubuntu.yml
@@ -23,6 +23,9 @@ jobs:
         - python-version: "3.13"
           env:
             TOXENV: py
+        - python-version: "3.14.0-rc.2"
+          env:
+            TOXENV: py
         - python-version: pypy3.10
           env:
             TOXENV: pypy3
