--- a/tox.ini
+++ b/tox.ini
@@ -10,18 +10,18 @@ commands = py.test --cov=parsel --cov-report=xml {posargs:docs parsel tests}
 [testenv:typing]
 deps =
     {[testenv]deps}
-    types-jmespath==1.0.2.20250711
-    types-lxml==2025.3.30
-    types-psutil==7.0.0.20250601
+    types-jmespath==1.0.2.20250809
+    types-lxml==2025.8.25
+    types-psutil==7.0.0.20250822
     py==1.11.0
-    mypy==1.17.0
+    mypy==1.18.1
 commands =
     mypy {posargs:parsel tests} --strict
 
 [testenv:pylint]
 deps =
     {[testenv]deps}
-    pylint==3.3.7
+    pylint==3.3.8
 commands =
     pylint docs parsel tests
 
@@ -42,8 +42,8 @@ commands =
 [testenv:twinecheck]
 basepython = python3
 deps =
-    twine==6.1.0
-    build==1.2.2.post1
+    twine==6.2.0
+    build==1.3.0
 commands =
     python -m build --sdist
     twine check dist/*
