Add Python 3.14 RC2 to CI, drop PyPy 3.10 (#327)

--- a/.github/workflows/tests-ubuntu.yml
+++ b/.github/workflows/tests-ubuntu.yml
@@ -23,15 +23,15 @@ jobs:
         - python-version: "3.13"
           env:
             TOXENV: py
-        - python-version: pypy3.10
+        - python-version: "3.14.0-rc.2"
           env:
-            TOXENV: pypy3
+            TOXENV: py
         - python-version: pypy3.11
           env:
             TOXENV: pypy3
 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v5
 
     - name: Install system libraries
       if: contains(matrix.python-version, 'pypy')
@@ -40,7 +40,7 @@ jobs:
         sudo apt-get install libxml2-dev libxslt-dev
 
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
+      uses: actions/setup-python@v6
       with:
         python-version: ${{ matrix.python-version }}
 
