--- a/.github/workflows/tests-ubuntu.yml
+++ b/.github/workflows/tests-ubuntu.yml
@@ -49,3 +49,37 @@ jobs:
 
     - name: Upload coverage report
       uses: codecov/codecov-action@v5
+
+  pinned-min-deps:
+    runs-on: ubuntu-latest
+    name: Pinned minimum dependencies (Python 3.10)
+    steps:
+    - uses: actions/checkout@v5
+
+    - name: Install system libraries
+      run: |
+        sudo apt-get update
+        sudo apt-get install libxml2-dev libxslt-dev
+
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v6
+      with:
+        python-version: '3.10'
+
+    - name: Upgrade pip and install tox
+      run: python -m pip install --upgrade pip tox
+
+    - name: Install pinned minimum dependencies
+      run: |
+        pip install \
+          cssselect==1.2.0 \
+          jmespath==1.0.0 \
+          lxml==5.1.0 \
+          packaging==23.0 \
+          w3lib==1.19.0
+
+    - name: Install Parsel with test extras
+      run: pip install -e .[test]
+
+    - name: Run tests with tox
+      run: tox
