ci: add pinned minimum dependencies test job (#324) (#334)

--- a/tox.ini
+++ b/tox.ini
@@ -52,3 +52,16 @@ commands =
 deps = pre-commit
 commands = pre-commit run --all-files --show-diff-on-failure
 skip_install = true
+
+[testenv:min-deps]
+description = Test with pinned minimum dependency versions
+basepython = python3.10
+deps =
+    {[testenv]deps}
+    cssselect==1.2.0
+    jmespath==1.0.0
+    lxml==5.1.0
+    packaging==23.0
+    w3lib==1.19.0
+usedevelop = True
+commands = {[testenv]commands}
