--- a/.github/workflows/tests-ubuntu.yml
+++ b/.github/workflows/tests-ubuntu.yml
@@ -26,6 +26,9 @@ jobs:
         - python-version: pypy3.11
           env:
             TOXENV: pypy3
+        - python-version: "3.10"
+          env:
+            TOXENV: min-deps
 
     steps:
     - uses: actions/checkout@v5
