--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,7 @@
 exclude: docs/_static
 repos:
 - repo: https://github.com/astral-sh/ruff-pre-commit
-  rev: v0.14.3
+  rev: v0.14.14
   hooks:
     - id: ruff-check
       args: [ --fix ]
@@ -11,13 +11,17 @@ repos:
   hooks:
   - id: blacken-docs
     additional_dependencies:
-    - black==25.1.0
+    - black==26.1.0
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v6.0.0
   hooks:
   - id: end-of-file-fixer
   - id: trailing-whitespace
 - repo: https://github.com/sphinx-contrib/sphinx-lint
-  rev: v1.0.0
+  rev: v1.0.2
   hooks:
     - id: sphinx-lint
+- repo: https://github.com/rhysd/actionlint
+  rev: v1.7.10
+  hooks:
+    - id: actionlint
