--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ deps =
     py==1.11.0
     mypy==1.19.1
 commands =
-    mypy {posargs:parsel tests} --strict
+    mypy {posargs:parsel tests}
 
 [testenv:pylint]
 deps =
