--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,8 +76,10 @@ branch = true
 [tool.coverage.report]
 exclude_also = [
     "@typing.overload",
-    "if TYPE_CHECKING:",
 ]
+
+[tool.mypy]
+strict = true
 
 [tool.pylint.MASTER]
 ignore = "typing"
