--- a/tox.ini
+++ b/tox.ini
@@ -10,18 +10,18 @@ commands = py.test --cov=parsel --cov-report=xml {posargs:docs parsel tests}
 [testenv:typing]
 deps =
     {[testenv]deps}
-    types-jmespath==1.0.2.20250809
-    types-lxml==2025.8.25
-    types-psutil==7.0.0.20250822
+    types-jmespath==1.1.0.20260124
+    types-lxml==2026.1.1
+    types-psutil==7.2.1.20260116
     py==1.11.0
-    mypy==1.18.1
+    mypy==1.19.1
 commands =
-    mypy {posargs:parsel tests} --strict
+    mypy {posargs:parsel tests}
 
 [testenv:pylint]
 deps =
     {[testenv]deps}
-    pylint==3.3.8
+    pylint==4.0.4
 commands =
     pylint docs parsel tests
 
@@ -43,7 +43,7 @@ commands =
 basepython = python3
 deps =
     twine==6.2.0
-    build==1.3.0
+    build==1.4.0
 commands =
     python -m build --sdist
     twine check dist/*
